# flag-set-cpp

./: .clang-format  .gitignore  LICENSE  README.md
include/: flag_set.hpp
tests/: CMakeLists.txt  README.md
tests/src/: flag-set-tests.cpp
